<resources>
    <string name="app_name">GenshinTB</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="personajeDescription">Retrato del personaje</string>
    <string name="elementoDescription">Elemento del personaje</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Equipos</string>
    <string name="tab_text_2">Personajes</string>
    <string name="tab_text_3">Placeholder</string>
    <string name="tab_text_4">Personajes</string>

    <string name="detalles">Detalles</string>
    <string name="estrella">Estrella</string>
    <string name="cambioPersonaje">Cambiar de personaje:</string>
    <string name="title_activity_equipo">EquipoActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="arma">Arma equipada:</string>
    <string name="cambioSet1">Primer set seleccionado:</string>
    <string name="cambioSet2">Segundo set seleccionado</string>
    <string name="relojPersonaje">Reloj equipado:</string>
    <string name="calizPersonaje">Cáliz equipado:</string>
    <string name="diademaPersonaje">Diadema equipada:</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="nuevoEquipo">Introduce el nombre</string>
    <string name="mismoPersonaje">El personaje ya está en el equipo</string>
    <string name="personajeCambiado">El personaje se ha cambiado con éxito</string>
    <string name="equipar">Equipar objetos</string>
    <string name="borrarEquipo">¿Deseas borrar el equipo?</string>
    <string name="borradoExito">El equipo se ha borrado con éxito</string>
    <string name="equipo">Equipo</string>
    <string name="equipoCreado">creado correctamente</string>
    <string name="estrellaDescripcion">Imagen de una estrella</string>
    <string name="miembroDescripcion">Imagen del miembro del equipo</string>
    <string name="botonAdd">Añadir personaje</string>
    <string name="equipoDefault">Equipo Predeterminado</string>
    <string name="filtroPersonajes">Filtrar</string>
    <string name="filtrado">Filtra los personajes</string>
    <string name="nombrePersonaje">Nombre del personaje</string>
    <string name="elementoPersonaje">Elemento del personaje</string>
    <string name="tipoArma">Tipo de arma</string>
    <string name="filtroVacio">No hay resultados para la búsqueda</string>
    <string name="todos">Todos</string>
    <string name="reinicioFiltro">Reiniciar</string>

    <string-array name="listaAtributosReloj">
        <item>Vida</item>
        <item>Defensa</item>
        <item>Ataque</item>
        <item>Recarga de Energía</item>
        <item>Maestría Elemental</item>

    </string-array>
    <string-array name="listaAtributosCaliz">
        <item>Vida</item>
        <item>Defensa</item>
        <item>Ataque</item>
        <item>Daño Físico</item>
        <item>Daño Elemental</item>
        <item>Maestría Elemental</item>

    </string-array>
    <string-array name="listaAtributosDiadema">
        <item>Vida</item>
        <item>Defensa</item>
        <item>Ataque</item>
        <item>Maestría Elemental</item>
        <item>Porcentaje de Crítico</item>
        <item>Daño de Crítico</item>
        <item>Bono de Curación</item>
    </string-array>

    <string-array name="listaEstrellas">
        <item>Todos</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="listaTipo">
        <item>Todos</item>
        <item>Arco</item>
        <item>Catalizador</item>
        <item>Claymore</item>
        <item>Espada</item>
        <item>Lanza</item>
    </string-array>
    <string-array name="listaElementos">
        <item>Todos</item>
        <item>Anemo</item>
        <item>Cryo</item>
        <item>Dendro</item>
        <item>Electro</item>
        <item>Geo</item>
        <item>Hydro</item>
        <item>Pyro</item>
    </string-array>

</resources>