<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MiembroFragment" >

    <Button
        android:id="@+id/detalles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detalles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textoCambiaPersonaje"
        app:layout_constraintTop_toBottomOf="@id/fotoElemento"

        />

    <TextView
        android:id="@+id/nombreMiembro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/estrellasMiembro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotoPersonaje"
        app:layout_constraintVertical_bias="0.413" />

    <TextView
        android:id="@+id/estrellasMiembro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/detalles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fotoElemento"
        app:layout_constraintTop_toBottomOf="@id/nombreMiembro" />

    <ImageView
        android:id="@+id/iconoEstrella"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/estrella"
        android:src="@android:drawable/btn_star_big_on"
        app:layout_constraintBottom_toBottomOf="@+id/estrellasMiembro"
        app:layout_constraintStart_toEndOf="@+id/estrellasMiembro"

        app:layout_constraintTop_toTopOf="@+id/estrellasMiembro" />

    <ImageView
        android:id="@+id/fotoPersonaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@id/nombreMiembro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/fotoElemento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_compass"
        app:layout_constraintBottom_toTopOf="@+id/detalles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toEndOf="@+id/iconoEstrella"
        app:layout_constraintTop_toBottomOf="@+id/nombreMiembro" />

    <Spinner
        android:id="@+id/listaCambio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detalles" />

    <TextView
        android:id="@+id/textoCambiaPersonaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cambioPersonaje"
        app:layout_constraintBottom_toTopOf="@+id/listaCambio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>